vlib/v/parser/tests/deprecated_call_without_after.vv
@[deprecated('use new_fn instead')]
fn old_positional() {}

@[deprecated(msg: 'use newer_fn instead')]
fn old_named() {}

@[deprecated(after: '2999-10-10')]
fn old_after_only() {}
